[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://images/start2.jpg" type="Texture" id=2]
[ext_resource path="res://images/StartButton.png" type="Texture" id=3]
[ext_resource path="res://images/SingleGame.png" type="Texture" id=4]
[ext_resource path="res://images/DesertCup.png" type="Texture" id=5]
[ext_resource path="res://images/Ring.png" type="Texture" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="StartButton" type="TextureButton" parent="TextureRect"]
margin_left = 450.491
margin_top = 162.747
margin_right = 647.491
margin_bottom = 357.747
rect_scale = Vector2( 0.51, 0.6 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="SingleGame" type="TextureButton" parent="TextureRect"]
margin_left = 467.416
margin_top = 20.0463
margin_right = 584.416
margin_bottom = 136.046
rect_scale = Vector2( 0.55, 0.6 )
texture_normal = ExtResource( 4 )
expand = true

[node name="DesertCup" type="TextureButton" parent="TextureRect"]
margin_left = 506.994
margin_top = 84.5557
margin_right = 546.994
margin_bottom = 124.556
rect_scale = Vector2( 1.7, 1.72 )
texture_normal = ExtResource( 5 )
expand = true

[node name="SingleRing" type="TextureButton" parent="TextureRect"]
visible = false
margin_left = 463.109
margin_top = 16.075
margin_right = 503.109
margin_bottom = 56.075
rect_scale = Vector2( 1.8, 1.9 )
texture_normal = ExtResource( 6 )
expand = true

[node name="DesertRing" type="TextureButton" parent="TextureRect"]
visible = false
margin_left = 503.484
margin_top = 80.4774
margin_right = 543.484
margin_bottom = 120.477
rect_scale = Vector2( 1.9, 1.9 )
texture_normal = ExtResource( 6 )
expand = true
[connection signal="pressed" from="TextureRect/StartButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureRect/SingleGame" to="." method="_on_SingleGame_pressed"]
[connection signal="pressed" from="TextureRect/DesertCup" to="." method="_on_DesertCup_pressed"]
